--- a/lunwen_frontend/src/main/webapp/WEB-INF/web.xml
+++ b/lunwen_frontend/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
 
-	<display-name>lunwen-frontend</display-name>
+	<display-name>lunwen_frontend</display-name>
 
 	<!-- 以下3项参数与log4j的配置相关 -->
 	<context-param>
